Move wezterm config to ~/.config + nordic color scheme

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@
 !bootstrap.sh
 !.gitignore
 !.gitconfig
-!.wezterm.lua
 !.config
 !.config/starship.toml
 !.config/nvim/
 !.config/nvim/**
+!.config/wezterm/
+!.config/wezterm/**
