--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,2 +1,8 @@
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
+
+setw -g mode-keys vi
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
