Add default delta config

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,25 @@
 [core]
 	autocrlf = input
 	editor = /usr/bin/vim
+	pager = delta
 [alias]
 	tree = log --graph --decorate --pretty=oneline --abbrev-commit
 [commit]
 	gpgsign = true
+[interactive]
+    diffFilter = delta --color-only --features=interactive --show-syntax-themes --dark
+
+[delta]
+    features = decorations
+
+[delta "interactive"]
+    keep-plus-minus-markers = false
+
+[delta "decorations"]
+    commit-decoration-style = blue ol
+    commit-style = raw
+    file-style = omit
+    hunk-header-decoration-style = blue box
+    hunk-header-file-style = red
+    hunk-header-line-number-style = "#067a00"
+    hunk-header-style = file line-number syntax
