Use a better theme for delta

--- a/.gitconfig
+++ b/.gitconfig
@@ -11,19 +11,19 @@
 [commit]
 	gpgsign = true
 [interactive]
-    diffFilter = delta --color-only --features=interactive --show-syntax-themes --dark
-
+	diffFilter = delta --color-only --features=interactive --show-syntax-themes --dark
+[include]
+	path = ~/.config/delta/themes.gitconfig
 [delta]
-    features = decorations
-
+	features = mellow-barbet
+	side-by-side = false
 [delta "interactive"]
-    keep-plus-minus-markers = false
-
+	keep-plus-minus-markers = false
 [delta "decorations"]
-    commit-decoration-style = blue ol
-    commit-style = raw
-    file-style = omit
-    hunk-header-decoration-style = blue box
-    hunk-header-file-style = red
-    hunk-header-line-number-style = "#067a00"
-    hunk-header-style = file line-number syntax
+	commit-decoration-style = blue ol
+	commit-style = raw
+	file-style = omit
+	hunk-header-decoration-style = blue box
+	hunk-header-file-style = red
+	hunk-header-line-number-style = "#067a00"
+	hunk-header-style = file line-number syntax
