--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,3 +1,7 @@
 [character]
 success_symbol = '[λ](bold green)'
 error_symbol = '[λ](bold red)'
+
+[kubernetes]
+format = '[$symbol$context( \($namespace\))]($style) in '
+disabled = false
