--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,6 +1,6 @@
 [character]
-success_symbol = '[λ](bold green)'
-error_symbol = '[λ](bold red)'
+success_symbol = '[\$](bold green)'
+error_symbol = '[\$](bold red)'
 
 [directory]
 style = 'green bold'
