--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,7 @@
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
+set-option -sg escape-time 10
+set-option -g focus-events on
 
 setw -g mode-keys vi
 bind-key h select-pane -L
