--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -7,7 +7,7 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
-  "theme": "Gruvbox Dark",
+  "theme": "One Dark",
   "vim_mode": true,
   "relative_line_numbers": true,
   "scrollbar": {
@@ -21,21 +21,21 @@
     "ss02": true,
     "ss19": true
   },
-  "ui_font_size": 18,
-  "buffer_font_size": 18,
+  "ui_font_size": 16,
+  "buffer_font_size": 14,
   "cursor_blink": false,
   "preferred_line_length": 80,
   "soft_wrap": "preferred_line_length",
   "language_overrides": {
     "Rust": {
-      "preferred_line_length": 120,
+      "preferred_line_length": 120
     },
     "Go": {
-      "preferred_line_length": 120,
+      "preferred_line_length": 120
     }
   },
   // AI stuff
   "semantic_index": {
-    "enabled": false,
+    "enabled": false
   }
 }
