feat(git): update gitignore to make it compatible with stow

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,4 @@
-/**
-
-!bootstrap.sh
-!.gitignore
-!.gitconfig
-!.config
-!.config/starship.toml
-!.config/nvim/
-!.config/nvim/**
-!.config/wezterm/
-!.config/wezterm/**
-!.config/alacritty/
-!.config/alacritty/**
-!.config/alacritty/alacritty-theme/
-!.config/alacritty/alacritty-theme/**
-!.config/tmux/
-!.config/tmux/**
-!.config/zellij/
-!.config/zellij/**
-!.config/delta/
-!.config/delta/**
+.config/zed/**
 !.config/zed/
 !.config/zed/keymap.json
 !.config/zed/settings.json
