--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -3,7 +3,9 @@ import = [
 ]
 
 [font]
-size = 12.0
+size = 11.0
+offset.x = 0 # Letter spacing
+offset.y = 10 # Line spacing
 
 [font.bold]
 family = "CaskaydiaCove Nerd Font"
@@ -20,4 +22,9 @@ style = "Italic"
 [font.normal]
 family = "CaskaydiaCove Nerd Font"
 # style = "Regular"
-style = "Semibold"
+style = "SemiBold"
+
+[window]
+decorations = "Transparent"
+opacity = 0.9
+blur = true
