feat(alacritty): customize alacritty rose pine theme

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,6 @@
 import = [
-    "~/.config/alacritty/alacritty-theme/themes/rose-pine.toml"
+    "~/.config/alacritty/themes/rose-pine.toml"
+    # "~/.config/alacritty/alacritty-theme/themes/rose-pine.toml"
 ]
 
 [font]
