--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,35 +1,33 @@
 # ctrl-shift-comma -> reload config
 
-# Change default shell to fish
-command = /usr/bin/fish
-
 # General
 # Don't ask for confirmation when exiting
 confirm-close-surface = false
 
 # Theme
-theme = rose-pine
-background = #191724
-foreground = #e0def4
-selection-background = #191724
-selection-foreground = #e0def4
-cursor-color = #e0def4
-palette = 0=#26233a
-palette = 1=#eb6f92
-palette = 2=#9ccfd8
-palette = 3=#f6c177
-palette = 4=#31748f
-palette = 5=#c4a7e7
-palette = 6=#ebbcba
-palette = 7=#e0def4
-palette = 8=#6e6a86
-palette = 9=#eb6f92
-palette = 10=#9ccfd8
-palette = 11=#f6c177
-palette = 12=#31748f
-palette = 13=#c4a7e7
-palette = 14=#ebbcba
-palette = 15=#e0def4
+theme = light:gruvbox-material-hard-light,dark:gruvbox-material-hard-dark
+# theme = rose-pine
+# background = #191724
+# foreground = #e0def4
+# selection-background = #191724
+# selection-foreground = #e0def4
+# cursor-color = #e0def4
+# palette = 0=#26233a
+# palette = 1=#eb6f92
+# palette = 2=#9ccfd8
+# palette = 3=#f6c177
+# palette = 4=#31748f
+# palette = 5=#c4a7e7
+# palette = 6=#ebbcba
+# palette = 7=#e0def4
+# palette = 8=#6e6a86
+# palette = 9=#eb6f92
+# palette = 10=#9ccfd8
+# palette = 11=#f6c177
+# palette = 12=#31748f
+# palette = 13=#c4a7e7
+# palette = 14=#ebbcba
+# palette = 15=#e0def4
 
 # Window
 # Can't get the opacity and blur working
