--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,23 @@
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
-set-option -sg escape-time 10
-set-option -g focus-events on
+
+set-option -s focus-events on # Send focus events to the applications
+set-option -s extend-keys on # Enable apps like nvim to bind to all? key combinations
+set-option -s escape-time 0 # Disable escape time for faster key response
+
+set-option -g base-index 1 # Window index starts at 1
+set-option -g pane-base-index 1 # Pane index starts at 1
+
+set-option -g mouse on # Enable mouse - useful for resizing panes
+set-option -g history-limit 100000 # Increase scrollback buffer
+
+set-option -g set-titles on # Set window titles
+set-option -g set-titles-string "#{pane_title}" # Set window title to current command (default behavior)
+
+
+bind-key c new-window -c "#{pane_current_path}" # Create new window in current directory
+bind-key '"' split-window -c "#{pane_current_path}" # Create a vertical split in current directory
+bind-key % split-window -h -c "#{pane_current_path}" # Create a horizontal split in current directory
 
 setw -g mode-keys vi
 bind-key h select-pane -L
