feat(tmux): update conf

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,26 +1,68 @@
+# Reload config with prefix + r
+bind r source-file ~/.config/tmux/tmux.conf \
+
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
-set-option -s focus-events on # Send focus events to the applications
-set-option -s extend-keys on # Enable apps like nvim to bind to all? key combinations
-set-option -s escape-time 0 # Disable escape time for faster key response
+set -s focus-events on # Send focus events to the applications
+set -s extended-keys on # Enable apps like nvim to bind to all? key combinations
 
-set-option -g base-index 1 # Window index starts at 1
-set-option -g pane-base-index 1 # Pane index starts at 1
+set -g base-index 1 # Window index starts at 1
+set -g pane-base-index 1 # Pane index starts at 1
+set -g renumber-windows on # Automatically renumber windows when one is closed
 
-set-option -g mouse on # Enable mouse - useful for resizing panes
-set-option -g history-limit 100000 # Increase scrollback buffer
+set -g mouse on # Enable mouse - useful for resizing panes
+set -g history-limit 100000 # Increase scrollback buffer
 
-set-option -g set-titles on # Set window titles
-set-option -g set-titles-string "#{pane_title}" # Set window title to current command (default behavior)
+set -g set-titles on # Set window titles
+set -g set-titles-string "#{pane_title}" # Set window title to current command (default behavior)
 
 
-bind-key c new-window -c "#{pane_current_path}" # Create new window in current directory
-bind-key '"' split-window -c "#{pane_current_path}" # Create a vertical split in current directory
-bind-key % split-window -h -c "#{pane_current_path}" # Create a horizontal split in current directory
+bind | split-window -h # Vertical split
+bind - split-window -v # Horizontal split
 
-setw -g mode-keys vi
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+bind c new-window -c "#{pane_current_path}" # Create new window in current directory
+bind '"' split-window -c "#{pane_current_path}" # Create a vertical split in current directory
+bind % split-window -h -c "#{pane_current_path}" # Create a horizontal split in current directory
+
+# Make vim experience better
+setw -g mode-keys vi # Enable vi mode in copy mode
+set -s escape-time 0 # Disable escape time for faster key response
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+
+# Styling
+red=#ffc0b9
+green=#c4ffd3
+blue=#b6f0ff
+gray1=#565a60
+gray2=#a7a9ae
+gray3=#16181d
+gray4=#65696f
+
+# Overall
+set -g status-style bg=${gray3},fg=${gray2}
+
+# Left
+set -g status-left "#[bg=${gray1},fg=${gray2}]   #S #[default]      "
+set -g status-left-length 100 # Allow the left side to grow
+
+## Window
+setw -g window-status-separator " "
+
+# Inactive window
+setw -g window-status-format " #I:#W#F "
+
+# Active window
+setw -g window-status-current-format " #I:#W#F "
+setw -g window-status-current-style bold,bg=${green},fg=${gray3}
+
+# Right
+set -g status-right ""
+
+# Experiments
+# set -g status-position top # Move status bar to the top
