--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,3 @@
-import = [
-    "~/.config/alacritty/themes/rose-pine.toml"
-]
 
 [font]
 size = 11.0
@@ -23,3 +20,8 @@ style = "Italic"
 family = "CaskaydiaCove Nerd Font"
 # style = "Regular"
 style = "SemiBold"
+
+[general]
+import = [
+    "~/.config/alacritty/themes/rose-pine.toml"
+]
