style(starship): show vim icon when in vi mode

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,6 +1,7 @@
 [character]
 success_symbol = '[\$](bold green)'
 error_symbol = '[\$](bold red)'
+vimcmd_symbol = '[](bold blue)'
 
 [directory]
 style = 'green bold'
