chore: keep the old tmux config just in case

--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -1,3 +1,6 @@
+# This configuration file is not linked anywhere and I've only kept it as a reference
+# Currently I'm using home-manager to manage this configuration.
+
 # Reload config with prefix + r
 bind r source-file ~/.config/tmux/tmux.conf \
 
